# stellarium-extra-telescope-plugin

./: .cproject  .project  CMakeLists.txt  stellarium-extra-telescope-plugin.files  stellarium-extra-telescope-plugin.includes
builds/unix/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/unix/src/: Makefile  cmake_install.cmake  ui_ExtraTelescopePluginWindow.h
builds/unix/src/ExtraTelescopePlugin-dynamic_autogen/: moc_predefs.h  mocs_compilation.cpp
builds/unix/src/ExtraTelescopePlugin-dynamic_autogen/DMHXEJ42XS/: moc_ExtraTelescopePluginWindow.cpp
builds/unix/src/ExtraTelescopePlugin-dynamic_autogen/EWIEGA46WW/: moc_ExtraTelescopePlugin.cpp
src/: CMakeLists.txt  ExtraTelescopePlugin.cpp  ExtraTelescopePlugin.hpp
src/NexStar/: NexStarCommand.cpp  NexStarCommand.hpp  NexStarConnection.cpp  NexStarConnection.hpp  TelescopeClientDirectNexStar.cpp  TelescopeClientDirectNexStar.hpp
src/gui/: ExtraTelescopePluginWindow.cpp  ExtraTelescopePluginWindow.hpp  ExtraTelescopePluginWindow.ui
